--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
   \include{preface}
 
 \mainmatter
-  % \include{ch1_introduction}
+  \include{ch1_introduction}
   \include{ch3_machine_learning}
 
 \backmatter
