some minor corrections to preface titles, names, dtes

--- a/preface.tex
+++ b/preface.tex
@@ -1,6 +1,6 @@
 %===============================================================================
 %          File: preface.tex
-%        Author: Pedro Ferrari
+%        Author: Juan de Monasterio
 %       Created: 08 Feb 2017
 % Last Modified: 08 Feb 2017
 %   Description: Preface for Math Thesis
@@ -8,10 +8,10 @@
 \chapter{Preface}
 \label{cha:preface}
 
-Some acknowledgments.
+Not much.
 
 \begin{flushright}
   \bigskip
   Buenos Aires\\
-  February 2017
+  May 2017
 \end{flushright}
