the proof section having \begin{equation} environments inside will not compile, bug needs fix

--- a/ch3_machine_learning.tex
+++ b/ch3_machine_learning.tex
@@ -1096,92 +1096,92 @@ There exists an upper bound for the generalization error.
 \end{theorem}
 
 
-%\begin{proof}
-%Define $\hat{j}(\textbf{x},\textbf{y})$ as $arg max_{j\neq \textbf{y}} P_{\Theta}(h(\textbf{x}) = j)$ and let the margin function for a random forest (not a group of classifiers) be defined as
-%
-%\begin{equation}\label{eq:rf-marginFunRf}
-%mr(\textbf{x},\textbf{y}) =  P_{\Theta}(h(\textbf{x}) = \textbf{y}) - P_{\Theta}(h(\textbf{x}) = \hat{j})
-%\\
-%= \Expect_{\Theta} \left[  I(h(\textbf{x},\Theta ) = y ) - I( h( \textbf{x},\Theta ) = \hat{j} )  \right]
+\begin{proof}
+Define $\hat{j}(\textbf{x},\textbf{y})$ as $arg max_{j\neq \textbf{y}} P_{\Theta}(h(\textbf{x}) = j)$ and let the margin function for a random forest (not a group of classifiers) be defined as
+
+\begin{equation}\label{eq:rf-marginFunRf}
+mr(\textbf{x},\textbf{y}) =  P_{\Theta}(h(\textbf{x}) = \textbf{y}) - P_{\Theta}(h(\textbf{x}) = \hat{j})
+\\
+= \Expect_{\Theta} \left[  I(h(\textbf{x},\Theta ) = y ) - I( h( \textbf{x},\Theta ) = \hat{j} )  \right]
+\end{equation}
+
+
+%\begin{equation}%\end{equation}
+
 %\end{equation}
-%
-%
-%%\begin{equation}%\end{equation}
-%
-%%\end{equation}
-%
-%Here the margin function is described as the expectation taken over another function which is called the \textbf{raw margin function}\label{eq:rf-rawMarginFun}. Intuitively, the raw margin function takes each sample to be $1$ or $-1$ according to whether the ensemble classifier can correctly classify or not the sample's label, given $\Theta$.
-%
-%With these definitions, it is straight to see that
-%
-%%\begin{equation}%\end{equation}
-%
-%\begin{equation}
-%mr( \textbf{x},\textbf{y} )^2 = \Expect_{\Theta, \Theta'} \left[ rmg( \Theta,\textbf{x},\textbf{y} ) \ rmg(\Theta',\textbf{x},\textbf{y} )  \right] 
-%\end{equation}.
-%
-%This in turn implies that
-%
-%\begin{equation}\label{eq:rf-marginFunVar}
-%\begin{split}
-%var(mr) & =  \Expect_{\Theta, \Theta'}
-%\left[
-%cov_{\textbf{x},\textbf{y}}
-%(rmg(\Theta,\textbf{x},\textbf{y} )rmg(\Theta',\textbf{x},\textbf{y} ))
-%\right] \\
-%& =  \Expect_{\Theta, \Theta'}
-%\left[
-%\rho(\Theta, \Theta')\sigma(\Theta)\sigma(\Theta')
-%\right]
-%\end{split}
-%\end{equation}
-%
-%where $ \rho(\Theta, \Theta')$ is the correlation between $rmg(\Theta,\textbf{x},\textbf{y})$ and $rmg(\Theta',\textbf{x},\textbf{y})$, and $\sigma(\Theta)$ is the standard deviation of $rmg(\Theta,\textbf{x},\textbf{y})$. In both cases, $\Theta$ and $\Theta'$ are given.% to be fixed.
-%
-%Equation \ref{eq:rf-marginFunVar} in turn implies that
-%
-%\begin{equation}\label{eq:rf-varianceBound}
-%\begin{split}
-%var(mr) & =  \overline{\rho} (\Expect_{\Theta}\left[ \sigma(\Theta)\right] )^2 \\
-%& \leq  \overline{\rho} \Expect_{\Theta} \left[ var(\Theta) \right]
-%\end{split}
-%\end{equation}
-%
-%where we have conveniently defined $\overline{\rho}$ as
-%
-%\begin{equation}\label{eq:rf-meanCorrelation}
-%\frac{\Expect_{\Theta, \Theta'} \left[ \rho(\Theta, \Theta') \sigma(\Theta) \sigma(\Theta')\right]}
-%{\Expect_{\Theta, \Theta'} \left[ \sigma(\Theta) \sigma(\Theta')\right]}
-%\end{equation}
-%
-%Note that this is the mean value of the correlation.
-%
-%Let the strength of the set of weak classifiers in the forest be defined as
-%
-%\begin{equation}
-%s =  \Expect_{\textbf{x},\textbf{y}} \left[ mr(\textbf{x},\textbf{y} ) \right] 
-%\end{equation}.\label{eq:rf-strength}
-%
-%Assuming that $s \geq 0$ we have that the prediction error is bounded by
-%\begin{equation}\label{eq:rf-predictiveErrorBound1}
-%PE^* \leq var(mr)/s^2
-%\end{equation}
-%by Chebyshev's inequality. On the other we also have that
-%
-%
-%\begin{equation}\label{eq:rf-expectedVarBound}
-%\begin{split}
-%\Expect_{\Theta} \left[ var(\Theta) \right]  & \leq \Expect_{\Theta} \left[ \Expect_{\textbf{x},\textbf{y}}\left[ rmg(\Theta,\textbf{x},\textbf{y})   \right]  \right]^2 -s^2  \\
-%& \leq 1-s^2
-%\end{split}
-%\end{equation}
-%
-%
-%We can use  \ref{eq:rf-varianceBound}, \ref{eq:rf-predictiveErrorBound1} and \ref{eq:rf-expectedVarBound} to establish the upper bound for the prediction error we are looking for
-%\begin{equation}\label{eq:rf-PEBound}
-%PE^* \leq \overline{\rho}\frac{(1-s^2)}{s^2}
-%\end{equation}
-%
+
+Here the margin function is described as the expectation taken over another function which is called the \textbf{raw margin function}\label{eq:rf-rawMarginFun}. Intuitively, the raw margin function takes each sample to be $1$ or $-1$ according to whether the ensemble classifier can correctly classify or not the sample's label, given $\Theta$.
+
+With these definitions, it is straight to see that
+
+%\begin{equation}%\end{equation}
+
+\begin{equation}
+mr( \textbf{x},\textbf{y} )^2 = \Expect_{\Theta, \Theta'} \left[ rmg( \Theta,\textbf{x},\textbf{y} ) \ rmg(\Theta',\textbf{x},\textbf{y} )  \right] 
+\end{equation}.
+
+This in turn implies that
+
+\begin{equation}\label{eq:rf-marginFunVar}
+\begin{split}
+var(mr) & =  \Expect_{\Theta, \Theta'}
+\left[
+cov_{\textbf{x},\textbf{y}}
+(rmg(\Theta,\textbf{x},\textbf{y} )rmg(\Theta',\textbf{x},\textbf{y} ))
+\right] \\
+& =  \Expect_{\Theta, \Theta'}
+\left[
+\rho(\Theta, \Theta')\sigma(\Theta)\sigma(\Theta')
+\right]
+\end{split}
+\end{equation}
+
+where $ \rho(\Theta, \Theta')$ is the correlation between $rmg(\Theta,\textbf{x},\textbf{y})$ and $rmg(\Theta',\textbf{x},\textbf{y})$, and $\sigma(\Theta)$ is the standard deviation of $rmg(\Theta,\textbf{x},\textbf{y})$. In both cases, $\Theta$ and $\Theta'$ are given.% to be fixed.
+
+Equation \ref{eq:rf-marginFunVar} in turn implies that
+
+\begin{equation}\label{eq:rf-varianceBound}
+\begin{split}
+var(mr) & =  \overline{\rho} (\Expect_{\Theta}\left[ \sigma(\Theta)\right] )^2 \\
+& \leq  \overline{\rho} \Expect_{\Theta} \left[ var(\Theta) \right]
+\end{split}
+\end{equation}
+
+where we have conveniently defined $\overline{\rho}$ as
+
+\begin{equation}\label{eq:rf-meanCorrelation}
+\frac{\Expect_{\Theta, \Theta'} \left[ \rho(\Theta, \Theta') \sigma(\Theta) \sigma(\Theta')\right]}
+{\Expect_{\Theta, \Theta'} \left[ \sigma(\Theta) \sigma(\Theta')\right]}
+\end{equation}
+
+Note that this is the mean value of the correlation.
+
+Let the strength of the set of weak classifiers in the forest be defined as
+
+\begin{equation}
+s =  \Expect_{\textbf{x},\textbf{y}} \left[ mr(\textbf{x},\textbf{y} ) \right] 
+\end{equation}.\label{eq:rf-strength}
+
+Assuming that $s \geq 0$ we have that the prediction error is bounded by
+\begin{equation}\label{eq:rf-predictiveErrorBound1}
+PE^* \leq var(mr)/s^2
+\end{equation}
+by Chebyshev's inequality. On the other we also have that
+
+
+\begin{equation}\label{eq:rf-expectedVarBound}
+\begin{split}
+\Expect_{\Theta} \left[ var(\Theta) \right]  & \leq \Expect_{\Theta} \left[ \Expect_{\textbf{x},\textbf{y}}\left[ rmg(\Theta,\textbf{x},\textbf{y})   \right]  \right]^2 -s^2  \\
+& \leq 1-s^2
+\end{split}
+\end{equation}
+
+
+We can use  \ref{eq:rf-varianceBound}, \ref{eq:rf-predictiveErrorBound1} and \ref{eq:rf-expectedVarBound} to establish the upper bound for the prediction error we are looking for
+\begin{equation}\label{eq:rf-PEBound}
+PE^* \leq \overline{\rho}\frac{(1-s^2)}{s^2}
+\end{equation}
+
 \end{proof}
 
 This bound on the generalization error shows the importance of the strength of each individual weak classifier in the forest and the correlation interdependence among them. The author of the algorithm \cite{breiman-randomforests} remarks here that this bound may not be strong. He also puts special importance on the ratio between the correlation and the strength $\frac{\overline{\rho}}{s^2}$ where this should be as small as possible to build a strong classifier.
